objects/Buying_Influence__c.object
<CustomObject>
    <description>A list of buying influences associated with an opportunity</description>
    <label>Buying Influence</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Buying Influence ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buying Influences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N30000000hxWCEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MH_Mode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Even Keel</fullName>
                </value>
                <value>
                    <fullName>Trouble</fullName>
                </value>
                <value>
                    <fullName>Over Confident</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mh_Role__c</fullName>
        <description>Miller Heiman SAM Buying Influence custom object</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Economic</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MH_Degree__c</fullName>
        <label>Degree of Influence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MH_Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>-4</fullName>
                </value>
                <value>
                    <fullName>-5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MH_Result__c</fullName>
        <label>Key Win-Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MH_Evidence__c</fullName>
        <label>Supporting Evidence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Buying Influences</relationshipLabel>
        <relationshipName>R00N30000000hxVREAY</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>